增加HBase shell模块笔记